--- a/deploy/runtime/help/html/samhelp_content.htm
+++ b/deploy/runtime/help/html/samhelp_content.htm
@@ -68,15 +68,15 @@
   <ul id="toc" style="list-style-type:none;display:block;padding-left:0">
 <li class="heading1" id="i1" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a1" href="introduction.htm" target="hmcontent"><span class="heading1" id="s1" ondblclick="return dblclicked(this)">Introduction</span></a>
 <ul id="ul1" style="list-style-type:none">
-<li class="heading2" id="i1.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a1.1" href="component_models_databases.htm" target="hmcontent"><span class="heading2" id="s1.1">Component Models and Databases</span></a>
+<li class="heading2" id="i1.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a1.1" href="technology_options.htm" target="hmcontent"><span class="heading2" id="s1.1">Performance Models</span></a>
 </li>
-<li class="heading2" id="i1.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a1.2" href="user_support.htm" target="hmcontent"><span class="heading2" id="s1.2">User Support</span></a>
+<li class="heading2" id="i1.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a1.2" href="fin_overview.htm" target="hmcontent"><span class="heading2" id="s1.2">Financial Models</span></a>
 </li>
-<li class="heading2" id="i1.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a1.3" href="keep_up_to_date.htm" target="hmcontent"><span class="heading2" id="s1.3">Keep SAM Up to Date</span></a>
+<li class="heading2" id="i1.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a1.3" href="user_support.htm" target="hmcontent"><span class="heading2" id="s1.3">User Support</span></a>
 </li>
-<li class="heading2" id="i1.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a1.4" href="fin_overview.htm" target="hmcontent"><span class="heading2" id="s1.4">Financial Models</span></a>
+<li class="heading2" id="i1.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a1.4" href="keep_up_to_date.htm" target="hmcontent"><span class="heading2" id="s1.4">Keep SAM Up to Date</span></a>
 </li>
-<li class="heading2" id="i1.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a1.5" href="technology_options.htm" target="hmcontent"><span class="heading2" id="s1.5">Performance Models</span></a>
+<li class="heading2" id="i1.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a1.5" href="component_models_databases.htm" target="hmcontent"><span class="heading2" id="s1.5">Component Models and Databases</span></a>
 </li>
 </ul>
 </li>
@@ -84,33 +84,35 @@
 <ul id="ul2" style="list-style-type:none">
 <li class="heading2" id="i2.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.1" href="welcome_page.htm" target="hmcontent"><span class="heading2" id="s2.1">Welcome Page</span></a>
 </li>
-<li class="heading2" id="i2.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.2" href="main_window.htm" target="hmcontent"><span class="heading2" id="s2.2">Main Window</span></a>
+<li class="heading2" id="i2.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.2" href="choose_performance_financial.htm" target="hmcontent"><span class="heading2" id="s2.2">Choose models</span></a>
 </li>
-<li class="heading2" id="i2.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.3" href="input_pages.htm" target="hmcontent"><span class="heading2" id="s2.3">Input Pages</span></a>
+<li class="heading2" id="i2.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.3" href="main_window.htm" target="hmcontent"><span class="heading2" id="s2.3">Main Window</span></a>
 </li>
-<li class="heading2" id="i2.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.4" href="performance_model_inputs.htm" target="hmcontent"><span class="heading2" id="s2.4">Performance Model Inputs</span></a>
+<li class="heading2" id="i2.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.4" href="input_pages.htm" target="hmcontent"><span class="heading2" id="s2.4">Input Pages</span></a>
 </li>
-<li class="heading2" id="i2.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.5" href="system_costs.htm" target="hmcontent"><span class="heading2" id="s2.5">System Costs</span></a>
+<li class="heading2" id="i2.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.5" href="performance_model_inputs.htm" target="hmcontent"><span class="heading2" id="s2.5">Performance Model Inputs</span></a>
 </li>
-<li class="heading2" id="i2.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.6" href="financial_model_inputs.htm" target="hmcontent"><span class="heading2" id="s2.6">Financial Model Inputs</span></a>
+<li class="heading2" id="i2.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.6" href="system_costs.htm" target="hmcontent"><span class="heading2" id="s2.6">System Costs</span></a>
 </li>
-<li class="heading2" id="i2.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.7" href="run_simulations.htm" target="hmcontent"><span class="heading2" id="s2.7">Run Simulations</span></a>
+<li class="heading2" id="i2.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.7" href="financial_model_inputs.htm" target="hmcontent"><span class="heading2" id="s2.7">Financial Model Inputs</span></a>
 </li>
-<li class="heading2" id="i2.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.8" href="results_page.htm" target="hmcontent"><span class="heading2" id="s2.8">Results Page</span></a>
+<li class="heading2" id="i2.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.8" href="run_simulations.htm" target="hmcontent"><span class="heading2" id="s2.8">Run Simulations</span></a>
 </li>
-<li class="heading2" id="i2.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.9" href="export_data.htm" target="hmcontent"><span class="heading2" id="s2.9">Export Data and Graphs</span></a>
+<li class="heading2" id="i2.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.9" href="results_page.htm" target="hmcontent"><span class="heading2" id="s2.9">Results Page</span></a>
 </li>
-<li class="heading2" id="i2.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.10" href="manage_cases.htm" target="hmcontent"><span class="heading2" id="s2.10">Manage Cases</span></a>
+<li class="heading2" id="i2.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.10" href="export_data.htm" target="hmcontent"><span class="heading2" id="s2.10">Export Data and Graphs</span></a>
 </li>
-<li class="heading2" id="i2.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.11" href="menus.htm" target="hmcontent"><span class="heading2" id="s2.11">Menus</span></a>
+<li class="heading2" id="i2.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.11" href="manage_cases.htm" target="hmcontent"><span class="heading2" id="s2.11">Manage Cases</span></a>
 </li>
-<li class="heading2" id="i2.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.12" href="notes.htm" target="hmcontent"><span class="heading2" id="s2.12">Notes</span></a>
+<li class="heading2" id="i2.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.12" href="menus.htm" target="hmcontent"><span class="heading2" id="s2.12">Menus</span></a>
 </li>
-<li class="heading2" id="i2.13" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.13" href="file_formats.htm" target="hmcontent"><span class="heading2" id="s2.13">File Formats</span></a>
+<li class="heading2" id="i2.13" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.13" href="notes.htm" target="hmcontent"><span class="heading2" id="s2.13">Notes</span></a>
 </li>
-<li class="heading2" id="i2.14" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.14" href="registration.htm" target="hmcontent"><span class="heading2" id="s2.14">Registration</span></a>
+<li class="heading2" id="i2.14" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.14" href="file_formats.htm" target="hmcontent"><span class="heading2" id="s2.14">File Formats</span></a>
 </li>
-<li class="heading2" id="i2.15" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.15" href="configure_proxy_server.htm" target="hmcontent"><span class="heading2" id="s2.15">Configure Proxy Server</span></a>
+<li class="heading2" id="i2.15" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.15" href="registration.htm" target="hmcontent"><span class="heading2" id="s2.15">Registration</span></a>
+</li>
+<li class="heading2" id="i2.16" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.16" href="configure_proxy_server.htm" target="hmcontent"><span class="heading2" id="s2.16">Configure Proxy Server</span></a>
 </li>
 </ul>
 </li>
