--- a/deploy/runtime/help/html/keep_up_to_date.htm
+++ b/deploy/runtime/help/html/keep_up_to_date.htm
@@ -38,18 +38,15 @@
 
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
-<h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">SAM Versions</span></h3>
-<p class="p_Text"><span class="f_Text">The SAM team releases new versions of SAM periodically. To find out if your version of SAM is the latest version, check the SAM website at <a href="http://sam.nrel.gov/" target="_blank" class="weblink">http://sam.nrel.gov/</a>. </span></p>
+<p class="p_Text"><span class="f_Text">The SAM team releases new versions of SAM periodically. To find out if your version of SAM is the latest version, check the SAM website's Download page at <a href="https://sam.nrel.gov/content/downloads" target="_blank" class="weblink" title="https://sam.nrel.gov/content/downloads">https://sam.nrel.gov/content/downloads</a>. </span></p>
 <p class="p_Text"><span class="f_Text">SAM's <a href="welcome_page.htm" class="topiclink">Welcome page</a> also displays news from the SAM team, including announcements of new versions.</span></p>
+<h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">SAM Version Information</span></h3>
 <p class="p_Text"><span class="f_Text">SAM displays the version number in the title bar of the Main window:</span></p>
-<p class="p_Text"><img src="ss_mainwindow-versionnumber.gif" width="371" height="129" alt="SS_MainWindow-VersionNumber" style="border:none" /></p>
-<p class="p_Text"><span class="f_Text">You can also find the SAM version number along with version numbers of other components of the software by clicking </span><span class="f_CHInterfaceElement">About</span><span class="f_Text"> on the </span><span class="f_CHInterfaceElement">Help</span><span class="f_Text"> menu:</span></p>
-<p class="p_Text"><img src="ss_helpabout-versionnumber.gif" width="385" height="256" alt="SS_HelpAbout-VersionNumber" style="border:none" /></p>
-<h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Checking for Updates</span></h3>
-<p class="p_Text"><span class="f_Text">Updates may be available before a new release is available to address minor issues with the software.</span></p>
-<p class="p_Text"><span class="f_Text">By default, SAM checks the SAM website for updates each time you start the software. You can disable this feature by clearing the checkmark on the Help menu next to </span><span class="f_CHInterfaceElement">Allow SAM to check for updates at startup</span><span class="f_Text">.</span></p>
-<p class="p_TitleProcedure"><span class="f_TitleProcedure">To check for updates:</span></p>
-<div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 3px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_ProcedureStep">On the Help menu, click </span><span class="f_CHInterfaceElement">Check for updates to this version</span><span class="f_ProcedureStep">.</span></td></tr></table></div><p class="p_ProcedureStepNoNumber"><img src="ss_menu-help.gif" width="324" height="255" alt="SS_Menu-Help" style="border:none" /></p>
+<p class="p_Text"><img src="ss_mainwindow-versionnumber.gif" width="371" height="133" alt="SS_MainWindow-VersionNumber" style="border:none" /></p>
+<p class="p_Text"><span class="f_Text">You can more detailed SAM version information by clicking </span><span class="f_CHInterfaceElement">About</span><span class="f_Text"> in the </span><span class="f_CHInterfaceElement">Help</span><span class="f_Text"> window:</span></p>
+<p class="p_Text"><img src="ss_helpabout-versionnumber.gif" width="772" height="246" alt="SS_HelpAbout-VersionNumber" style="border:none" /></p>
+<h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Updating SAM</span></h3>
+<p class="p_Text"><span class="f_Text">If a newer version of SAM is available on the SAM website that the version installed on your computer, you can download and install it to update SAM. You can either keep the older version on your computer, or remove it using your operating system's uninstall program.</span></p>
 
 </td></tr></table>
 
