--- a/deploy/runtime/help/html/user_support.htm
+++ b/deploy/runtime/help/html/user_support.htm
@@ -38,57 +38,8 @@
 
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
-<p class="p_Text"><span class="f_Text">For information about any page in the software, do one of the following:</span></p>
-<div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 0px;"><table class="WhereTable" style="border:none; border-spacing:0px;">
-<tr style="text-align:left;vertical-align:middle;">
-<td style="vertical-align:middle; width:182px; padding:2px;"><p class="p_TableTextCenter"><img src="img_f1key.gif" width="44" height="34" alt="IMG_f1key" style="border:none" /><span class="f_ImageCaption"> </span></p>
-<p class="p_TableTextCenter"><span class="f_ImageCaption"> <img src="img_mac-command-key.gif" width="123" height="34" alt="IMG_mac-command-key" style="border:none" /></span></p>
-</td>
-<td style="vertical-align:middle; padding:2px;"><p class="p_Text"><span class="f_Text">Press the F1 key in Windows or Command-? in Mac OS.</span></p>
-</td>
-</tr>
-<tr style="text-align:left;vertical-align:middle;">
-<td style="vertical-align:middle; width:182px; padding:2px;"><p class="p_TableTextCenter"><img src="ss_button-helpquestionmark.gif" width="42" height="42" alt="SS_Button-HelpQuestionMark" style="border:none" /></p>
-</td>
-<td style="vertical-align:middle; padding:2px;"><p class="p_Text"><span class="f_Text">Click the help button at</span><span class="f_ImageCaption"> the top right corner of each input page.</span></p>
-</td>
-</tr>
-<tr style="text-align:left;vertical-align:middle;">
-<td style="vertical-align:middle; width:182px; padding:2px;"><p class="p_TableTextCenter"><img src="ss_menu-helpcontents.gif" width="149" height="32" alt="SS_Menu-HelpContents" style="border:none" /></p>
-</td>
-<td style="vertical-align:middle; padding:2px;"><p class="p_TableTextLeft"><span class="f_Text">Click </span><span class="f_CHInterfaceElement">Help Contents</span><span class="f_Text"> from the Help menu.</span></p>
-</td>
-</tr>
-<tr style="text-align:left;vertical-align:middle;">
-<td style="vertical-align:middle; width:182px; padding:2px;"><p class="p_TableTextCenter"><img src="ss_button-help.gif" width="114" height="33" alt="SS_Button-Help" style="border:none" /></p>
-</td>
-<td style="vertical-align:middle; padding:2px;"><p class="p_TableTextLeft"><span class="f_Text">In secondary windows, click the Help button for information about the window.</span></p>
-</td>
-</tr>
-</table>
-</div>
-<p class="p_Text"><span class="f_Text">For additional help, try:</span></p>
-<div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 0px;"><table class="WhereTable" style="border:none; border-spacing:0px;">
-<tr style="text-align:left;vertical-align:middle;">
-<td style="vertical-align:middle; width:61px; padding:2px;"><p class="p_TableTextCenter"><img src="ss_button-website.gif" width="28" height="30" alt="SS_Button-Website" style="border:none" /></p>
-</td>
-<td style="vertical-align:middle; padding:2px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">For general information about the model, including a discussion of project costs, references to related publications and a list of frequently asked questions, and other information visit the SAM website: <a href="http://sam.nrel.gov/" target="_blank" class="weblink">http://sam.nrel.gov/</a>.</span></p>
-</td>
-</tr>
-<tr style="text-align:left;vertical-align:middle;">
-<td style="vertical-align:middle; width:61px; padding:2px;"><p class="p_TableTextCenter"><img src="ss_button-usergroup.gif" width="32" height="32" alt="SS_Button-UserGroup" style="border:none" /></p>
-</td>
-<td style="vertical-align:middle; padding:2px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">For user support, post a question on the SAM forum at <a href="https://sam.nrel.gov/forums/support-forum" target="_blank" class="weblink">https://sam.nrel.gov/forums/support-forum</a>.</span></p>
-</td>
-</tr>
-<tr style="text-align:left;vertical-align:middle;">
-<td style="vertical-align:middle; width:61px; padding:2px;"><p class="p_TableTextCenter"><img src="ss_button-support.gif" width="30" height="26" alt="SS_Button-Support" style="border:none" /></p>
-</td>
-<td style="vertical-align:middle; padding:2px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">To send an email to the SAM team, contact us at <a href="mailto:sam.support@nrel.gov" class="weblink">sam.support@nrel.gov</a>.</span></p>
-</td>
-</tr>
-</table>
-</div>
+<p class="p_Text"><span class="f_Text">For information about SAM, please use the following resource on the SAM website:</span></p>
+<div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 3px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_List"><a href="https://sam.nrel.gov/forums/support-forum" target="_blank" class="weblink" title="https://sam.nrel.gov/forums/support-forum">Support forum</a> to search for answers and post questions about SAM. To participate in the forum, you must <a href="https://sam.nrel.gov/user/register" target="_blank" class="weblink" title="https://sam.nrel.gov/user/register">register</a> on the SAM website.</span></td></tr></table></div><div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 3px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_List"><a href="https://sam.nrel.gov/content/resources-learning-sam" target="_blank" class="weblink" title="https://sam.nrel.gov/content/resources-learning-sam">Learning page</a> for links to webinars and user documentation</span></td></tr></table></div><div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 3px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_CHInterfaceElement">Resources menu</span><span class="f_List"> for technical documentation, sample files, and weather data information</span></td></tr></table></div><div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 3px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_List"><a href="https://sam.nrel.gov/contact" target="_blank" class="weblink" title="https://sam.nrel.gov/contact">Contact page</a> to send an email to the SAM team</span></td></tr></table></div><p class="p_Text"><span class="f_Text">&nbsp;</span></p>
 
 </td></tr></table>
 
