--- a/deploy/runtime/help/html/power_tower_systems.htm
+++ b/deploy/runtime/help/html/power_tower_systems.htm
@@ -38,7 +38,8 @@
 
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
-<p>Enter topic text here.</p>
+<p class="p_Text"><span class="f_Text">For a power tower (central receiver) system, choose either the <a href="power_tower_molten_salt.htm" class="topiclink">molten salt power tower</a> model or the <a href="power_tower_direct_steam.htm" class="topiclink">direct steam power tower</a> model.</span></p>
+<p class="p_Text"><span class="f_Text">Both models use the same set of inputs for <a href="pt_location_and_resource.htm" class="topiclink">location and resource</a> and <a href="pt_system_costs.htm" class="topiclink">system costs</a>.</span></p>
 
 </td></tr></table>
 
