--- a/deploy/runtime/help/html/window_optimization_wizard.htm
+++ b/deploy/runtime/help/html/window_optimization_wizard.htm
@@ -51,7 +51,7 @@
 <p class="p_VariableName"><span class="f_VariableName">Receiver and Tower</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The receiver and tower optimization variables determine the optimization search range and step size for the receiver and tower dimensions.</span></p>
 <h4 class="p_Heading4"><span class="f_Heading4">External Receiver and Tower</span></h4>
-<p class="p_Note"><span class="f_CHNote">Note.</span><span class="f_Note"> For the molten salt power tower model, when you choose the cavity receiver option on the <a href="towerms_tower_and_receiver.htm" class="topiclink">Tower and Receiver page</a>, the optimization wizard shows dimensions for the cavity receiver: Aperture width replaces receiver diameter below, and aperture height replaces receiver height. The cavity receiver option is not available for the direct steam power tower model in the current version of SAM.</span></p>
+<p class="p_Note"><span class="f_CHNote">Note.</span><span class="f_Note"> For the molten salt power tower model, when you choose the cavity receiver option on the <a href="mspt_tower_and_receiver.htm" class="topiclink">Tower and Receiver page</a>, the optimization wizard shows dimensions for the cavity receiver: Aperture width replaces receiver diameter below, and aperture height replaces receiver height. The cavity receiver option is not available for the direct steam power tower model in the current version of SAM.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Min Receiver Diameter (m)</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The minimum value for the range of receiver diameter values that the wizard will search for an optimal solution.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Max Receiver Diameter (m)</span></p>
@@ -71,7 +71,7 @@
 <p class="p_VariableName"><span class="f_VariableName">Optimization Levels for Tower Height</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The number of tower height values to evaluate in the search for an optimal solution. The maximum allowed number of optimization levels is 10.</span></p>
 <h4 class="p_Heading4"><span class="f_Heading4">Cavity Receiver and Tower</span></h4>
-<p class="p_Note"><span class="f_CHNote">Note.</span><span class="f_Note"> The cavity receiver and tower variables are active when you specify Cavity Receiver on the <a href="towerms_tower_and_receiver.htm" class="topiclink">Tower and Receiver page</a>.</span></p>
+<p class="p_Note"><span class="f_CHNote">Note.</span><span class="f_Note"> The cavity receiver and tower variables are active when you specify Cavity Receiver on the <a href="mspt_tower_and_receiver.htm" class="topiclink">Tower and Receiver page</a>.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Min Aperture Width (m)</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The minimum value for the range of receiver aperture width values that the wizard will search for an optimal solution.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Max Aperture Width (m)</span></p>
