--- a/deploy/runtime/help/html/biopower_emissions.htm
+++ b/deploy/runtime/help/html/biopower_emissions.htm
@@ -29,7 +29,7 @@
 <table style="width:100%; border:none; border-spacing:0px; padding:5px; background:#FFFFFF; color:#0072C6;">
   <tr style="vertical-align:middle">
     <td style="text-align:left">
-      <h1 class="p_Heading1"><span class="f_Heading1">Life-Cycle Emissions</span></h1>
+      <h1 class="p_Heading1"><span class="f_Heading1">Emissions</span></h1>
 
     </td>
   </tr>
