--- a/deploy/runtime/help/html/fin_sale_leaseback.htm
+++ b/deploy/runtime/help/html/fin_sale_leaseback.htm
@@ -139,7 +139,7 @@
 </td>
 <td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Estimated Net Output at Design (Nameplate) (MWe)</span></p>
 </td>
-<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="towerms_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
+<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="mspt_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
@@ -147,7 +147,7 @@
 </td>
 <td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Net nameplate capacity (MWe)</span></p>
 </td>
-<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="towerds_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
+<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="dspt_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
@@ -171,7 +171,7 @@
 </td>
 <td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Net nameplate capacity (MWe)</span></p>
 </td>
-<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="lf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
+<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="mslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
